# substreams-foundational-modules

./: .gitignore  README.md
antelope-common/: Cargo.toml  Makefile  README.md  buf.gen.yaml  sample_trx.json  substreams.yaml
antelope-common/proto/sf/substreams/antelope/v1/: action.proto  transaction.proto
antelope-common/src/: actions.rs  index.rs  lib.rs  maps.rs
antelope-common/src/pb/: mod.rs  sf.antelope.type.v1.rs  sf.substreams.antelope.v1.rs  sf.substreams.v1.rs
ethereum-common/: Cargo.toml  Makefile  buf.gen.yaml  substreams.yaml
ethereum-common/benches/: filter_calls.rs
ethereum-common/proto/sf/substreams/ethereum/v1/: call.proto  event.proto  events_and_calls.proto  transaction.proto
ethereum-common/src/: calls.rs  combined.rs  events.rs  lib.rs  map_events.rs
ethereum-common/src/pb/: mod.rs  sf.substreams.ethereum.v1.rs
injective-common/: .gitignore  Cargo.toml  Makefile  README.md  buf.yaml  deriived-substreams-example.yaml  derived-substreams-example.yaml  generated-buf-build.binpb  substreams.yaml
injective-common/basic/: README.md  substreams.yaml
injective-common/src/: lib.rs
injective-common/usdt-exchange-volume/: .gitignore  Cargo.toml  README.md  substreams.yaml
mantra-common/: README.md  substreams.yaml
solana-common/: Cargo.toml  Makefile  README.md  substreams-v0.2.0.yaml  substreams-v0.3.0.yaml  substreams.yaml
solana-common/proto/: instructions.proto
solana-common/proto/sf/substreams/solana/v1/: transactions.proto
solana-common/proto/sol/instructions/v1/: instructions.proto
solana-common/proto/sol/transactions/v1/: transactions.proto
solana-common/src/: block.rs  index.rs  instruction.rs  lib.rs  transaction.rs
solana-common/src/pb/: mod.rs  sol.instructions.v1.rs  sol.transactions.v1.rs
starket-common/: .sfreleaser  README.md  generated.go  go.mod  go.sum  local.go  main.go  main_test.go  substreams.yaml
starket-common/proto/: buf.gen.yaml
starknet-common/: .gitignore  CONTRIBUTING.md  Makefile  README.md  generated.go  go.mod  go.sum  index.go  main.go  main.wasm  main_test.go  substreams.yaml
starknet-common/proto/: buf.gen.yaml  buf.yaml
starknet-common/sqe/: keys.go
vara-common/: .gitignore  CONTRIBUTING.md  Makefile  README.md  gen.go  go.mod  go.sum  index.go  local.go  main.go  main_test.go  metadata.go  metadata_test.go  primitives.go  substreams.vara.yaml  substreams.yaml
vara-common/metadata/: metadata.go
vara-common/pb/: block.pb.go  block_vtproto.pb.go  extrinsics.pb.go  extrinsics_vtproto.pb.go
vara-common/proto/: block.proto  buf.gen.yaml  buf.yaml  extrinsics.proto
vara-common/testdata/: 100.blocks.jsonl  103900.blocks.jsonl  10849000.blocks.jsonl  10849200.blocks.jsonl  10934300.blocks.jsonl  10934500.blocks.jsonl  11626900.blocks.jsonl  11627100.blocks.jsonl  1213900.blocks.jsonl  12224600.blocks.jsonl  12224800.blocks.jsonl  12629400.blocks.jsonl  12629600.blocks.jsonl  12884900.blocks.jsonl  12885100.blocks.jsonl  137800.blocks.jsonl  138000.blocks.jsonl  1380000.blocks.jsonl  14008400.blocks.jsonl  14008600.blocks.jsonl  14463900.blocks.jsonl  14895300.blocks.jsonl  15069100.blocks.jsonl  15069300.blocks.jsonl  15281200.blocks.jsonl  15281400.blocks.jsonl  15644500.blocks.jsonl  17400.blocks.jsonl  17600.blocks.jsonl  4182000.blocks.jsonl  4182200.blocks.jsonl  4433300.blocks.jsonl  4433500.blocks.jsonl  4641100.blocks.jsonl  (+23 more)
(+124 files in other folders)
