[package]
name = "antelope-common"
version = "0.4.0"
description = "Foundational Substreams Modules for Antelope Chains"
edition = "2021"
repository = "https://github.com/streamingfast/substreams-foundational-modules/antelope-common"
license = "Apache 2.0"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = ">=0.5.18"
substreams-antelope = "0.4"
serde_json = "1.0"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
